[gd_scene load_steps=18 format=3 uid="uid://dtjn8c2ay15xk"]

[ext_resource type="Script" path="res://scripts/dialogue_system.gd" id="1_dckcq"]
[ext_resource type="FontFile" uid="uid://mnflroidndvn" path="res://assets/fonts/fusion-pixel-10px-monospaced.otc" id="2_0c0fu"]
[ext_resource type="Texture2D" uid="uid://brh3hkvfxetia" path="res://assets/tachie/resu.png" id="2_s8ynm"]
[ext_resource type="Texture2D" uid="uid://mvog4b74gks8" path="res://assets/system/dialogue_bg.png" id="2_vx4vm"]
[ext_resource type="PackedScene" uid="uid://bn73yc4lc33tk" path="res://component/options/options.tscn" id="3_ym6pg"]
[ext_resource type="Texture2D" uid="uid://8njtou875t0t" path="res://assets/system/next_sign.png" id="4_svu3c"]
[ext_resource type="Texture2D" uid="uid://lpilsdx5g3v4" path="res://assets/system/joypadkey.png" id="5_e3ucw"]
[ext_resource type="PackedScene" uid="uid://bwqclo5yw5lri" path="res://component/key_tips_bottom/key_tips_bottom.tscn" id="6_doo03"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wehxc"]
texture = ExtResource("2_vx4vm")
modulate_color = Color(0, 0, 0, 0.827451)

[sub_resource type="LabelSettings" id="LabelSettings_rbe6h"]
font = ExtResource("2_0c0fu")
font_size = 18
font_color = Color(0.92475, 0.574947, 0.209639, 1)

[sub_resource type="Animation" id="Animation_fxsbr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueBox/MarginContainer/VBoxContainer/Control2/TextureRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_87q3v"]
resource_name = "shark"
length = 0.5
loop_mode = 2
step = 0.333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueBox/MarginContainer/VBoxContainer/Control2/TextureRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhsiw"]
_data = {
"RESET": SubResource("Animation_fxsbr"),
"shark": SubResource("Animation_87q3v")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_rr5ho"]
atlas = ExtResource("5_e3ucw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q858d"]
atlas = ExtResource("5_e3ucw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jdun"]
atlas = ExtResource("5_e3ucw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vy64"]
atlas = ExtResource("5_e3ucw")
region = Rect2(160, 0, 32, 32)

[node name="DialogueSystem" type="CanvasLayer"]
process_priority = 10
layer = 11
script = ExtResource("1_dckcq")

[node name="DialogueBox" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 446.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wehxc")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 248
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="DialogueBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 37.34)
layout_mode = 2

[node name="NameLabel" type="Label" parent="DialogueBox/MarginContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(-3.275, 0)
layout_mode = 2
offset_left = 4.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 33.0
text = "礼诗"
label_settings = SubResource("LabelSettings_rbe6h")

[node name="ContentLabel" type="RichTextLabel" parent="DialogueBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("2_0c0fu")
bbcode_enabled = true
text = "礼诗要说的话显示在这里
礼诗要说的话显示在这里"
scroll_active = false
autowrap_mode = 2

[node name="Control2" type="Control" parent="DialogueBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect2" type="TextureRect" parent="DialogueBox/MarginContainer/VBoxContainer/Control2"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("4_svu3c")
expand_mode = 2
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/MarginContainer/VBoxContainer/Control2"]
root_node = NodePath("../../../../..")
libraries = {
"": SubResource("AnimationLibrary_vhsiw")
}
autoplay = "shark"

[node name="MarginContainer2" type="MarginContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="StartToPonderMode" type="HBoxContainer" parent="DialogueBox/MarginContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="XButton" type="HBoxContainer" parent="DialogueBox/MarginContainer2/StartToPonderMode"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="DialogueBox/MarginContainer2/StartToPonderMode/XButton"]
layout_mode = 2
texture = SubResource("AtlasTexture_rr5ho")

[node name="Label" type="Label" parent="DialogueBox/MarginContainer2/StartToPonderMode/XButton"]
layout_mode = 2
text = "sys_startponder"

[node name="PonderMode" type="HBoxContainer" parent="DialogueBox/MarginContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 7

[node name="AButton" type="HBoxContainer" parent="DialogueBox/MarginContainer2/PonderMode"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="DialogueBox/MarginContainer2/PonderMode/AButton"]
layout_mode = 2
texture = SubResource("AtlasTexture_q858d")

[node name="Label" type="Label" parent="DialogueBox/MarginContainer2/PonderMode/AButton"]
layout_mode = 2
text = "sys_ponder"

[node name="BButton" type="HBoxContainer" parent="DialogueBox/MarginContainer2/PonderMode"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="DialogueBox/MarginContainer2/PonderMode/BButton"]
layout_mode = 2
texture = SubResource("AtlasTexture_6jdun")

[node name="Label" type="Label" parent="DialogueBox/MarginContainer2/PonderMode/BButton"]
layout_mode = 2
text = "sys_exit"

[node name="YButton2" type="HBoxContainer" parent="DialogueBox/MarginContainer2/PonderMode"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="DialogueBox/MarginContainer2/PonderMode/YButton2"]
layout_mode = 2
texture = SubResource("AtlasTexture_0vy64")

[node name="Label" type="Label" parent="DialogueBox/MarginContainer2/PonderMode/YButton2"]
layout_mode = 2
text = "sys_item"

[node name="KeyTipsBottom" parent="DialogueBox/MarginContainer2" instance=ExtResource("6_doo03")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 214.0
offset_right = 307.661
offset_bottom = 673.0
scale = Vector2(0.84, 0.84)
texture = ExtResource("2_s8ynm")
expand_mode = 2
stretch_mode = 4

[node name="Options" parent="." instance=ExtResource("3_ym6pg")]
offset_left = 618.0
offset_top = 347.0
offset_right = 774.0
offset_bottom = 433.0
